syntax = "proto3";

option go_package="./;rpc";

service Process {
  rpc StartWorker(StartRequest) returns (StartResponse);
  rpc StopWorker(PidRequest) returns (Response);
  rpc RestartWorker(PidRequest) returns (Response);
  rpc WorkerStateCheck(PidRequest) returns (Response);
}

message StartRequest {
  string command = 1; // 命令
  string logFile = 2; //日志文件
}

message StartResponse {
  int64 pid = 1;
}

message PidRequest {
  int64 pid = 1; //
}

message Response {
  string code = 1;
  string message = 2;
}